--- a/styles/styles.css
+++ b/styles/styles.css
@@ -333,14 +333,17 @@ body #services-phone {
   flex-direction: column;
   width: 50%;
   margin-bottom: 25px;
+  text-align: center;
 }
 .about-bio h4 {
-  padding: 65px 0 30px 25px;
+  padding: 25px 0 0 25px;
   font-size: 42px;
+  text-align: center;
 }
 .about-bio p {
   font-size: 24px;
-  padding: 55px 10% 0 25px;
+  padding-top: 25px;
+  /* padding: 55px 10% 0 25px; */
 }
 
 /* ---------- Testimonials ---------- */
